[gd_scene load_steps=6 format=2]

[ext_resource path="res://check.png" type="Texture" id=1]
[ext_resource path="res://CheckPoint.gd" type="Script" id=2]
[ext_resource path="res://hint.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.525 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 41.9398

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( -0.0372334, -9.94378 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spin = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.0372334, -9.94378 )
collision_layer = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="EnterSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
